--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<div class="grid-container">
 		<div>A</div>
 		<div>radiant</div>
-		<div class="last">youngg</div>
+		<div class="last">young</div>
 		<div>woman</div>
 		<div>to</div>
 		<div>light</div>
