--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		body{
 			margin: 1rem;
 			background-color: black;
+			background: url(flames.gif) no-repeat center/cover;
 			color: whitesmoke;
 			font-size: 5rem;
 			overflow: hidden;
@@ -21,6 +22,10 @@
 		.last{
 			padding-bottom: 2rem;
 			border-bottom: 2px solid rgb(220,200,180);
+		}
+		html{
+			width: 100%;
+			height: 100%;
 		}
 	</style>
 </head>
