--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
       body {
         margin: 1rem;
         background-color: black;
-        background: url(flames.gif) no-repeat center/cover;
+        background: url(do-you.gif) no-repeat center/cover;
         color: whitesmoke;
         font-size: 5rem;
         overflow: hidden;
-		transition-property: transform;
-		transition-duration: 3s;
+
       }
       .grid-container {
         display: grid;
@@ -29,34 +28,47 @@
         width: 100%;
         height: 100%;
       }
+      body {
+        transition-property: transform;
+        transition-duration: 3s;
+      }
+
+      
+      body{
+        animation-name: fadeOut;
+        animation-duration: 2s;
+      }
 	 
     </style>
   </head>
   <body>
     <div class="grid-container">
-      <div>A</div>
-      <div>radiant</div>
-      <div class="last">young</div>
-      <div>woman</div>
-      <div>to</div>
-      <div>light</div>
-      <div>the</div>
-      <div class="last">darkest</div>
-      <div>corners</div>
-      <div>of</div>
-      <div class="last">winter</div>
+      <div>flowers</div>
+      <div class="last">underfoot</div>
+      <div>doctor</div>
+      <div>pepper</div>
+      <div>in</div>
+      <div>my</div>
+      <div class="last">hand</div>
+      <div>looking</div>
+      <div>out</div>
+      <div>for</div>
+      <div class="last">bees</div>
     </div>
 
     <img src="assets/img/cat.jpg" alt="" style="max-width: 32rem" />
 
     <script src="./assets/js/main.js"></script>
-	<script>
-		let rotation = 0;
-		setInterval(function(){
-			rotation += 5;		
-			document.body.style.transform = 'rotate(${rotation}deg)';
-		}, 100);
 
-	</script>
+    <script>
+      let rotation = 0;
+      document.addEventListener("click", function(){
+        let min = 10;
+        let max = 40;
+        rotation += Math.random() * (max-min) + min;
+        document.body.style.transform = `rotate(${rotation}deg)`;
+      });
+    </script>
+	
   </body>
 </html>
